--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -1,13 +1,8 @@
-# .github/workflows/daily-news.yml
 name: Daily Pre-Market News Bot
 
 on:
   schedule:
-    # Runs at 5:30 AM EST (10:30 AM UTC) Monday-Friday
-    # Note: GitHub Actions uses UTC time
     - cron: '30 10 * * 1-5'
-  
-  # Allow manual trigger for testing
   workflow_dispatch:
 
 jobs:
@@ -23,14 +18,6 @@ jobs:
       with:
         python-version: '3.11'
     
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -42,7 +29,6 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
       run: |
-    
-    - name: Log completion
-      run: |
-        echo "✅ Pre-market news bot completed at $(date)"
+        echo "Starting pre-market news bot..."
+        python daily_news.py
+        echo "Bot completed."
